; ModuleID = '/home/carl/AnghaBench/linux/arch/sparc/kernel/extr_chmc.c_chmc_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/arch/sparc/kernel/extr_chmc.c_chmc_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32* }
%struct.chmc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.platform_device*, %struct.chmc*)* @chmc_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @chmc_destroy(%struct.platform_device* %0, %struct.chmc* %1) #0 {
  %3 = alloca %struct.platform_device*, align 8
  %4 = alloca %struct.chmc*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %3, align 8
  store %struct.chmc* %1, %struct.chmc** %4, align 8
  %5 = load %struct.chmc*, %struct.chmc** %4, align 8
  %6 = getelementptr inbounds %struct.chmc, %struct.chmc* %5, i32 0, i32 1
  %7 = call i32 @list_del(i32* %6)
  %8 = load %struct.platform_device*, %struct.platform_device** %3, align 8
  %9 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  %12 = load %struct.chmc*, %struct.chmc** %4, align 8
  %13 = getelementptr inbounds %struct.chmc, %struct.chmc* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @of_iounmap(i32* %11, i32 %14, i32 72)
  %16 = load %struct.chmc*, %struct.chmc** %4, align 8
  %17 = call i32 @kfree(%struct.chmc* %16)
  ret void
}

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @of_iounmap(i32*, i32, i32) #1

declare dso_local i32 @kfree(%struct.chmc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
